environments/gloo-gateway-ui/additional-cluster-1/online-boutique-app/base/web-ui-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-ui
  labels:
    istio.io/rev: 1-22
